# SensiFileChk

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt  test_result.txt
config/: keywords.json
docs/: architecture.md  build-deploy.md  development-plan.md  fix-plan.md  test-plan.md
src/: checker.py  cli.py  config.py  report.py
src/parsers/: __init__.py  archive.py  base.py  office.py  pdf.py  txt.py
tests/: conftest.py  test_checker.py  test_cli.py  test_config.py  test_integration.py  test_parsers.py  test_report.py  test_web.py
tests/fixtures/: generate_rar_fixtures.py
web-admin/: main.py
web_admin/: __init__.py  main.py
